Alterações de layout.

--- a/mysite/MedicalSys/templates/MedicalSys/novoPaciente.html
+++ b/mysite/MedicalSys/templates/MedicalSys/novoPaciente.html
@@ -57,7 +57,7 @@
                 </div>
                 {{ form.data }}
 
-                <button type="submit">Enviar</button>
+                <button class="btn btn-dark" type="submit">Enviar</button>
             </div>
         </form>
     </div>
