--- a/mysite/MedicalSys/templates/MedicalSys/updateMedico.html
+++ b/mysite/MedicalSys/templates/MedicalSys/updateMedico.html
@@ -34,7 +34,8 @@
             </div>
             {{ form.data }}
 
-            <button type="submit">atualizar</button>
+            <button class="btn btn-dark" type="submit">atualizar</button>
+            <a class="btn btn-dark" href="{% url 'medicos' %}">Cancelar</a>
         </div>
     </form>
 
