--- a/mysite/MedicalSys/templates/MedicalSys/index.html
+++ b/mysite/MedicalSys/templates/MedicalSys/index.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <a href="http://127.0.0.1:8000/admin">admin</a>
-    <a href="{% url 'pacientes' %}">Pacientes</a>
-    <a href="{% url 'medicos' %}">Mediocos</a>
+    <div class="container">
+        <div class="row justify-content-md-center">
+            <div class="col col-lg-2 mt-5">
+                <a class="btn btn-dark btn-lg" href="{% url 'medicos' %}">Mediocos</a>
+            </div>
+            <div class="col col-lg-2 mt-5" >
+                <a class="btn btn-dark btn-lg" href="{% url 'pacientes' %}">Pacientes</a>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
