--- a/mysite/MedicalSys/templates/MedicalSys/pacientes.html
+++ b/mysite/MedicalSys/templates/MedicalSys/pacientes.html
@@ -12,7 +12,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container mt-5">
         <table class="table table-dark table-striped">
             <thead>
                 <tr>
