--- a/mysite/MedicalSys/templates/MedicalSys/updatePaciente.html
+++ b/mysite/MedicalSys/templates/MedicalSys/updatePaciente.html
@@ -54,7 +54,8 @@
             
             {{ form.data }}
 
-            <button type="submit">atualizar</button>
+            <button class="btn btn-dark" type="submit">atualizar</button>
+            <a class="btn btn-dark" href="{% url 'pacientes' %}">Cancelar</a>
         </div>
     </form>
 
